--- a/package.json
+++ b/package.json
@@ -5,5 +5,13 @@
   "main": "src/index.js",
   "repository": "https://github.com/dmorita00/fixed-table",
   "author": "dmorita00",
-  "license": "MIT"
+  "scripts": {
+    "dev": "webpack-dev-server"
+  },
+  "license": "MIT",
+  "devDependencies": {
+    "webpack": "^5.72.0",
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.8.1"
+  }
 }
